--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "framer-motion": "^6.3.11",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
