--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-  "cSpell.words": [
-    "AAQLO",
-    "Fullpage",
-    "intropage",
-    "Kuli"
-  ]
+  "cSpell.words": ["AAQLO", "Formik", "Fullpage", "intropage", "Kuli"]
 }
