--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^6.3.11",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hooks-global-state": "^2.0.0-rc.0",
     "react-responsive": "^9.0.0-beta.10",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
